--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_show_posts.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_show_posts.xml
@@ -7,14 +7,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.FragmentShowPosts">
 
-    <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvSearch"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:elevation="0dp"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvFragmentHomePageSearch">
+
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etFragmentHomePageSearch"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/rounded_white_button_login"
+            android:hint="  Pretraga"
+            android:paddingLeft="15dp"
+            android:inputType="textPersonName" />
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="49dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:background="#00FFFFFF"
+            app:backgroundTint="#00FFFFFF"
+            app:cornerRadius="16dp"
+            app:icon="@drawable/ic_baseline_search_24"
+            app:iconTint="#333D70" />
+
+    </androidx.cardview.widget.CardView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -27,6 +53,7 @@
             android:layout_height="50dp"
             android:layout_alignParentRight="true"
             android:src="@drawable/filter"
+            android:padding="@dimen/component_padding"
             android:scaleType="centerCrop"
             android:background="@color/white"/>
 
@@ -38,6 +65,7 @@
             android:layout_weight="1"
             android:scaleType="centerCrop"
             android:src="@drawable/sort"
+            android:padding="@dimen/component_padding"
             app:layout_constraintStart_toEndOf="@+id/btnSortType"
             tools:layout_editor_absoluteY="0dp"
             android:background="@color/white"/>
@@ -49,8 +77,9 @@
             android:layout_marginEnd="16dp"
             android:layout_weight="1"
             android:background="@color/white"
+            android:padding="@dimen/component_padding"
             android:scaleType="centerCrop"
-            android:src="@drawable/list"
+            android:src="@drawable/list_empty"
             app:layout_constraintEnd_toStartOf="@+id/btnGridLayout"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/btnSortDirection"
@@ -64,7 +93,8 @@
             android:layout_weight="1"
             android:background="@color/white"
             android:scaleType="centerCrop"
-            android:src="@drawable/grid"
+            android:src="@drawable/grid_full"
+            android:padding="@dimen/component_padding"
             android:clickable="true"
             app:layout_constraintStart_toEndOf="@+id/btnSortDirection"
             tools:layout_editor_absoluteY="0dp" />
