--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_add_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_add_post.xml
@@ -10,6 +10,7 @@
         android:id="@+id/isActivityAddPostSwitcher"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:elevation="10dp"
         app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostUploadFromGallery"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,60 +46,95 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
+        android:clickable="false"
         android:id="@+id/btnActivityAddPostUploadFromGallery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="177dp"
+        android:layout_height="19dp"
         android:text="Otvori galeriju"
+        android:visibility="invisible"
+        app:cornerRadius="20dp"
         app:layout_constraintBottom_toTopOf="@+id/tvActivityAddPostLocationtext"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tvActivityAddPostLocationtext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:text="Lokacija"
         app:layout_constraintBottom_toTopOf="@+id/etActivityAddPostLocation"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/etActivityAddPostLocation"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Reykjavik, Iceland"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/tvActivityAddPostDescriptiontext"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tvActivityAddPostDescriptiontext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:text="Opis"
         app:layout_constraintBottom_toTopOf="@+id/etActivityAddPostDescription"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/etActivityAddPostDescription"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Reykjavik, Iceland"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostPost"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnActivityAddPostPost"
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="40dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/rounded_cyan_button"
         android:backgroundTint="#1C789A"
         android:text="Objavi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnActivityAddPostUploadFromGalleryVisible"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:stateListAnimator="@null"
+        app:backgroundTint="#00FFFFFF"
+        app:icon="@drawable/ic_baseline_add_photo_alternate_24"
+        app:iconGravity="textEnd"
+        app:iconSize="40dp"
+        app:iconTint="#1C7696"
+        app:layout_constraintBottom_toBottomOf="@+id/isActivityAddPostSwitcher"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/isActivityAddPostSwitcher" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
