--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_capture_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_capture_post.xml
@@ -8,33 +8,39 @@
 
         <ImageView
             android:id="@+id/ivActivityCapturePostImage"
-            android:layout_width="408dp"
-            android:layout_height="319dp"
+            android:layout_width="413dp"
+            android:layout_height="0dp"
             android:layout_marginTop="4dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toTopOf="@+id/btnActivityCapturePostCapture"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ImageContrastCheck"
             tools:srcCompat="@tools:sample/avatars" />
 
         <Button
             android:id="@+id/btnActivityCapturePostCapture"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="68dp"
+            android:layout_width="68dp"
+            android:layout_height="15dp"
+            android:visibility="invisible"
             app:cornerRadius="30dp"
             app:icon="@android:drawable/ic_menu_camera"
+            app:iconTint="#FFFFFF"
+            android:clickable="false"
             app:layout_constraintBottom_toTopOf="@+id/tvActivityCapturePostLocationtext"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivActivityCapturePostImage" />
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <TextView
             android:id="@+id/tvActivityCapturePostLocationtext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="464dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="516dp"
+            android:layout_marginEnd="16dp"
             android:text="Lokacija"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -45,20 +51,26 @@
             android:id="@+id/etActivityCapturePostLocation"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
             android:ems="10"
             android:hint="Reykjavik, Iceland"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvActivityCapturePostLocationtext" />
+            app:layout_constraintTop_toBottomOf="@+id/tvActivityCapturePostLocationtext"
+            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck"
+            android:importantForAutofill="no" />
 
         <TextView
             android:id="@+id/tvActivityCapturePostDescriptiontext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             android:text="Opis"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -69,26 +81,49 @@
             android:id="@+id/etActivityCapturePostDescription"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
             android:ems="10"
             android:hint="Reykjavik, Iceland"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvActivityCapturePostDescriptiontext" />
+            app:layout_constraintTop_toBottomOf="@+id/tvActivityCapturePostDescriptiontext"
+            tools:ignore="TextContrastCheck"
+            android:importantForAutofill="no" />
 
 
         <Button
             android:id="@+id/btnActivityCapturePostPost"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
+            android:layout_width="244dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/rounded_cyan_button"
             android:backgroundTint="#1C789A"
             android:text="Objavi"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="w,1:1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.431"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="TouchTargetSizeCheck" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnActivityCapturePostCaptureVisible"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:stateListAnimator="@null"
+            app:backgroundTint="#00FFFFFF"
+            app:icon="@drawable/ic_baseline_add_a_photo_24"
+            app:iconGravity="textEnd"
+            app:iconSize="40dp"
+            app:iconTint="#1C7696"
+            app:layout_constraintBottom_toTopOf="@+id/btnActivityCapturePostCapture"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
