--- a/Client/BrzoDoLokacije/app/src/main/res/layout/post_preview.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/post_preview.xml
@@ -14,6 +14,7 @@
         android:id="@+id/locationImage"
         android:layout_width="match_parent"
         android:layout_height="250dp"
+        android:layout_marginTop="16dp"
         android:outlineProvider="background"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
