--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_show_posts.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_show_posts.xml
@@ -52,10 +52,12 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentRight="true"
-            android:src="@drawable/filter"
+            android:background="@color/white"
             android:padding="@dimen/component_padding"
             android:scaleType="centerCrop"
-            android:background="@color/white"/>
+            android:src="@drawable/filter"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btnSortDirection"
@@ -63,12 +65,12 @@
             android:layout_height="50dp"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
+            android:background="@color/white"
+            android:padding="@dimen/component_padding"
             android:scaleType="centerCrop"
             android:src="@drawable/sort"
-            android:padding="@dimen/component_padding"
             app:layout_constraintStart_toEndOf="@+id/btnSortType"
-            tools:layout_editor_absoluteY="0dp"
-            android:background="@color/white"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btnLinearLayout"
@@ -83,7 +85,7 @@
             app:layout_constraintEnd_toStartOf="@+id/btnGridLayout"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/btnSortDirection"
-            tools:layout_editor_absoluteY="0dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btnGridLayout"
@@ -92,12 +94,12 @@
             android:layout_marginStart="248dp"
             android:layout_weight="1"
             android:background="@color/white"
+            android:clickable="true"
+            android:padding="@dimen/component_padding"
             android:scaleType="centerCrop"
             android:src="@drawable/grid_full"
-            android:padding="@dimen/component_padding"
-            android:clickable="true"
             app:layout_constraintStart_toEndOf="@+id/btnSortDirection"
-            tools:layout_editor_absoluteY="0dp" />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     android:layout_height="match_parent"
