--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_add_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_add_post.xml
@@ -73,7 +73,7 @@
 
     <EditText
         android:id="@+id/etActivityAddPostLocation"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -81,8 +81,20 @@
         android:hint="Reykjavik, Iceland"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/tvActivityAddPostDescriptiontext"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnActivityAddPostAddLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/rounded_cyan_button"
+        android:backgroundTint="#1C789A"
+        android:text="Dodaj lokaciju"
+        app:layout_constraintBottom_toTopOf="@+id/tvActivityAddPostDescriptiontext"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/etActivityAddPostLocation" />
 
     <TextView
         android:id="@+id/tvActivityAddPostDescriptiontext"
