Izmenjen profil korisnika, dodati resursi.

--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_user_profile.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_user_profile.xml
@@ -15,7 +15,7 @@
 
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
-            android:layout_height="290dp"
+            android:layout_height="300dp"
             android:foreground="@drawable/b3"
             android:foregroundGravity="center_vertical|center|center_horizontal|fill"
             android:src="@drawable/b3"
@@ -23,32 +23,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-
-            android:id="@+id/imageView4"
-            android:layout_width="411dp"
-            android:layout_height="287dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-            app:layout_constraintEnd_toEndOf="@id/imageView3"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/imageView3"
-            app:layout_constraintTop_toTopOf="@+id/imageView3"
-            app:layout_constraintVertical_bias="0.0" />
 
         <com.google.android.material.imageview.ShapeableImageView
 
             android:id="@+id/tvFragmentProfileInfoContainer"
             android:layout_width="0dp"
-            android:layout_height="220dp"
+            android:layout_height="199dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="156dp"
+            android:layout_marginTop="150dp"
             android:layout_marginEnd="20dp"
             android:adjustViewBounds="true"
-            android:background="#E8FFFFFF"
+            android:background="@drawable/profile_view_background"
+
             android:elevation="1dp"
             android:scaleType="fitEnd"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageView3"
             app:shapeAppearanceOverlay="@style/imageViewRoundedEdge" />
@@ -59,164 +49,23 @@
             android:layout_width="140dp"
             android:layout_height="140dp"
             android:layout_gravity="center"
+            android:layout_marginTop="80dp"
             android:elevation="10dp"
             app:cardCornerRadius="250dp"
-            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.77">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
 
                 android:id="@+id/tvFragmentProfileProfilePicture"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:elevation="10dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_baseline_person_24"
                 tools:ignore="ContentDescription" />
         </androidx.cardview.widget.CardView>
-
-        <TableLayout
-            android:id="@+id/tableLayout"
-            android:layout_width="323dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-10dp"
-
-            android:elevation="20dp"
-            android:gravity="center"
-            android:stretchColumns="1"
-            app:layout_constraintBottom_toBottomOf="@+id/tvFragmentProfileInfoContainer"
-            app:layout_constraintEnd_toEndOf="@+id/tvFragmentProfileInfoContainer"
-            app:layout_constraintHorizontal_bias="0.488"
-            app:layout_constraintStart_toStartOf="@+id/tvFragmentProfileInfoContainer"
-            app:layout_constraintTop_toTopOf="@+id/tvFragmentProfileInfoContainer">
-
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-
-                android:gravity="center">
-
-                <TextView
-                    android:id="@+id/tvFragmentProfileName"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Petar Petrović"
-
-                    android:textSize="25sp" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-
-                android:gravity="center">
-
-                <com.google.android.material.button.MaterialButton
-                    android:layout_height="35dp"
-                    android:layout_gravity="start"
-                    android:width="150dp"
-                    android:height="10dp"
-                    android:background="@drawable/rounded_cyan_button"
-                    android:text="Prati" />
-
-                <com.google.android.material.button.MaterialButton android:layout_gravity="end"
-                    android:layout_height="35dp"
-                    android:width="150dp"
-                    android:height="10dp"
-                    android:background="@drawable/rounded_cyan_button"
-                    android:text="Poruka"
-                    />
-
-            </TableRow>
-        </TableLayout>
-
-        <LinearLayout
-            android:layout_marginTop="20dp"
-            android:elevation="30dp"
-            android:id="@+id/linearLayout3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/tableLayout">
-<LinearLayout
-    android:orientation="horizontal"
-
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tvFragmentProfilePosts"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_marginStart="40dp"
-                android:layout_marginEnd="20dp"
-                android:text="OBJAVE" />
-
-            <TextView
-                android:layout_marginStart="40dp"
-                android:layout_marginEnd="40dp"
-                android:id="@+id/tvFragmentProfileFollowers"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="PRATIOCI" />
-
-    <TextView
-        android:id="@+id/tvFragmentProfileFollow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_gravity="right"
-        android:text="PRAĆENJA" />
-</LinearLayout>
-            <LinearLayout
-                android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:gravity="center"
-            app:layout_constraintBottom_toBottomOf="@+id/tvFragmentProfileInfoContainer"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tableLayout">
-
-            <TextView
-                android:id="@+id/tvFragmentProfilePostsNo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_gravity="left"
-                android:layout_marginStart="60dp"
-                android:layout_marginEnd="35dp"
-
-                android:text="156" />
-
-            <TextView
-                android:id="@+id/tvFragmentProfileFollowersNo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="50"
-                android:layout_gravity="left"
-                android:layout_marginStart="60dp"
-                android:layout_marginEnd="20dp"/>
-
-            <TextView
-                android:id="@+id/tvFragmentProfileFollowNo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_gravity="left"
-                android:layout_marginStart="40dp"
-                android:layout_marginEnd="20dp"
-                android:text="40" />
-            </LinearLayout>
-        </LinearLayout>
-
 
         <View
             android:id="@+id/divider"
@@ -225,10 +74,10 @@
             android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnFragmentProfileShowMyPosts" />
+            app:layout_constraintTop_toBottomOf="@+id/btnFragmentUserProfileShowPosts" />
 
         <Button
-            android:id="@+id/btnFragmentProfileShowMyPosts"
+            android:id="@+id/btnFragmentUserProfileShowPosts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -242,7 +91,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer" />
 
         <Button
-            android:id="@+id/btnFragmentProfileShowMyData"
+            android:id="@+id/btnFragmentUserProfileShowData"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -254,11 +103,11 @@
             android:textColor="@color/cardview_dark_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/btnFragmentProfileShowMyRecensions"
+            app:layout_constraintStart_toEndOf="@+id/btnFragmentUserProfileShowRecensions"
             app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer" />
 
         <Button
-            android:id="@+id/btnFragmentProfileShowMyRecensions"
+            android:id="@+id/btnFragmentUserProfileShowRecensions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
@@ -267,7 +116,7 @@
             android:stateListAnimator="@null"
             android:text="Recenzije"
             android:textColor="@color/cardview_dark_background"
-            app:layout_constraintStart_toEndOf="@+id/btnFragmentProfileShowMyPosts"
+            app:layout_constraintStart_toEndOf="@+id/btnFragmentUserProfileShowPosts"
             app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer" />
 
         <FrameLayout
@@ -279,6 +128,120 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/divider">
         </FrameLayout>
+
+        <TableLayout
+            android:elevation="1dp"
+
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="8dp"
+            android:numColumns="3"
+
+            android:stretchColumns="1"
+            app:layout_constraintBottom_toBottomOf="@+id/tvFragmentProfileInfoContainer"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cvFragmentHomePageProfile">
+
+            <TableRow android:layout_column="1">
+
+                <TextView
+                    android:id="@+id/tvFragmentUserProfileName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_column="1"
+                    android:layout_gravity="center"
+                    android:text="Petar Petrović"
+                    android:textSize="20sp"
+                    android:layout_marginBottom="5dp"/>
+            </TableRow>
+
+            <TableRow>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_span="3">
+
+                    <ImageButton
+
+                        android:id="@+id/materialButton"
+                        android:layout_width="115dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="16dp"
+                        android:background="@drawable/rounded_transparent_button"
+                        android:foreground="@drawable/button_follow"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0"
+                        tools:ignore="TouchTargetSizeCheck" />
+
+                    <ImageButton
+                        android:layout_width="115dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="16dp"
+                        android:height="40dp"
+                        android:background="@drawable/rounded_transparent_button"
+                        android:foreground="@drawable/button_chat"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0"
+                        tools:ignore="SpeakableTextPresentCheck" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </TableRow>
+
+
+            <TableRow
+                android:layout_marginTop="5dp">
+
+                <TextView
+                    android:id="@+id/tvFragmentUserProfilePosts"
+                    android:layout_width="110dp"
+                    android:gravity="center"
+                    android:text="OBJAVE" />
+
+                <TextView
+                    android:id="@+id/tvFragmentUserProfileFollowers"
+                    android:layout_width="10dp"
+                    android:gravity="center"
+                    android:text="PRATIOCI" />
+
+                <TextView
+                    android:id="@+id/tvFragmentUserProfileFollow"
+
+                    android:layout_width="110dp"
+                    android:gravity="center"
+                    android:text="PRAĆENJA" />
+            </TableRow>
+
+            <TableRow>
+
+                <TextView
+                    android:id="@+id/tvFragmentUserProfilePostsNo"
+                    android:layout_width="110dp"
+                    android:gravity="center"
+                    android:textFontWeight="700"
+                    android:text="156" />
+
+                <TextView
+                    android:id="@+id/tvFragmentUserProfileFollowersNo"
+                    android:layout_width="110dp"
+                    android:gravity="center"
+                    android:text="50" />
+
+                <TextView
+                    android:id="@+id/tvFragmentUserProfileFollowNo"
+                    android:layout_width="110dp"
+                    android:gravity="center"
+                    android:text="40" />
+
+            </TableRow>
+
+        </TableLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
