--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_capture_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_capture_post.xml
@@ -49,7 +49,7 @@
 
         <EditText
             android:id="@+id/etActivityCapturePostLocation"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
@@ -63,6 +63,19 @@
             app:layout_constraintTop_toBottomOf="@+id/tvActivityCapturePostLocationtext"
             tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck"
             android:importantForAutofill="no" />
+        <Button
+            android:id="@+id/btnActivityCapturePostAddLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/rounded_cyan_button"
+            android:backgroundTint="#1C789A"
+            android:text="Dodaj lokaciju"
+            app:layout_constraintBottom_toTopOf="@+id/tvActivityCapturePostDescriptiontext"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/etActivityCapturePostLocation" />
+
 
         <TextView
             android:id="@+id/tvActivityCapturePostDescriptiontext"
